// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Integration GET /course/:cid should return course if course is found 1`] = `
{
  "course_code": "COSC 499",
  "course_name": "Capstone Project",
  "created_at": "1000000000",
  "id": 1,
  "invite_code": "123",
  "is_archived": false,
  "section_name": "001",
  "semester": null,
  "updated_at": "1000000000",
}
`;

exports[`Course Integration GET /course/:cid/analytics should return 200 and courseMembersSize, examCount if course has students, exams, but no submissions 1`] = `
{
  "courseExamsCount": 4,
  "courseMembersSize": 4,
  "examSubmissions": [
    {
      "exam": {
        "id": 2,
        "title": "Exam-1",
      },
      "submissions": [],
    },
    {
      "exam": {
        "id": 4,
        "title": "Exam-3",
      },
      "submissions": [],
    },
    {
      "exam": {
        "id": 1,
        "title": "Exam-0",
      },
      "submissions": [],
    },
    {
      "exam": {
        "id": 3,
        "title": "Exam-2",
      },
      "submissions": [],
    },
  ],
  "examSubmissionsCount": 0,
}
`;

exports[`Course Integration GET /course/:cid/analytics should return 200 and courseMembersSize, examCount, submissionCount if course has students, exams, and submissions 1`] = `
{
  "courseExamsCount": 4,
  "courseMembersSize": 4,
  "examSubmissions": [
    {
      "exam": {
        "id": 1,
        "title": "Exam-0",
      },
      "submissions": [
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 2,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 3,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 4,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
      ],
    },
    {
      "exam": {
        "id": 2,
        "title": "Exam-1",
      },
      "submissions": [
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 2,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 3,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 4,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
      ],
    },
    {
      "exam": {
        "id": 3,
        "title": "Exam-2",
      },
      "submissions": [
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 2,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 3,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 4,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
      ],
    },
    {
      "exam": {
        "id": 4,
        "title": "Exam-3",
      },
      "submissions": [
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 2,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 3,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
        {
          "student": {
            "avatarUrl": null,
            "firstName": "John",
            "id": 4,
            "lastName": "Doe",
            "submissionScore": -1,
          },
        },
      ],
    },
  ],
  "examSubmissionsCount": 12,
}
`;

exports[`Course Integration GET /course/:cid/analytics should return 200 and only courseMembersStats if course has no exams or submissions 1`] = `
{
  "courseExamsCount": 0,
  "courseMembersSize": 11,
  "examSubmissions": [],
  "examSubmissionsCount": 0,
}
`;

exports[`Course Integration GET /course/:cid/exams should return 200 if user is enrolled with default query parameters 1`] = `
{
  "data": [
    {
      "created_at": "1000000000",
      "exam_date": "1000000009",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 10,
      "name": "Exam 9",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000008",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 9,
      "name": "Exam 8",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000007",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 8,
      "name": "Exam 7",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000006",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 7,
      "name": "Exam 6",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000005",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 6,
      "name": "Exam 5",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000004",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 5,
      "name": "Exam 4",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000003",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 4,
      "name": "Exam 3",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000002",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 3,
      "name": "Exam 2",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000001",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 2,
      "name": "Exam 1",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000000",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 1,
      "name": "Exam 0",
      "questions": {},
      "updated_at": "1000000000",
    },
  ],
  "meta": {
    "hasNextPage": false,
    "hasPreviousPage": false,
    "itemCount": 10,
    "pageCount": null,
  },
}
`;

exports[`Course Integration GET /course/:cid/exams should return 200 when only two exams are requested 1`] = `
{
  "data": [
    {
      "created_at": "1000000000",
      "exam_date": "1000000009",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 10,
      "name": "Exam 9",
      "questions": {},
      "updated_at": "1000000000",
    },
    {
      "created_at": "1000000000",
      "exam_date": "1000000008",
      "exam_folder": null,
      "grades_released_at": null,
      "id": 9,
      "name": "Exam 8",
      "questions": {},
      "updated_at": "1000000000",
    },
  ],
  "meta": {
    "hasNextPage": true,
    "hasPreviousPage": false,
    "itemCount": 10,
    "page": "1",
    "pageCount": 5,
    "take": "2",
  },
}
`;

exports[`Course Integration GET /course/:cid/exams/graded should return 200 and graded exams 1`] = `
[
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 1,
    "name": "Exam 0",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 2,
    "name": "Exam 1",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 3,
    "name": "Exam 2",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 4,
    "name": "Exam 3",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 5,
    "name": "Exam 4",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 6,
    "name": "Exam 5",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 7,
    "name": "Exam 6",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 8,
    "name": "Exam 7",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 9,
    "name": "Exam 8",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "exam_folder": null,
    "id": 10,
    "name": "Exam 9",
    "questions": {},
    "updated_at": "1000000000",
  },
]
`;

exports[`Course Integration GET /course/:cid/exams/upcoming should return 200 and upcoming exams 1`] = `
[
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 1,
    "name": "Exam 0",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 2,
    "name": "Exam 1",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 3,
    "name": "Exam 2",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 4,
    "name": "Exam 3",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 5,
    "name": "Exam 4",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 6,
    "name": "Exam 5",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 7,
    "name": "Exam 6",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 8,
    "name": "Exam 7",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 9,
    "name": "Exam 8",
    "questions": {},
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "exam_folder": null,
    "grades_released_at": null,
    "id": 10,
    "name": "Exam 9",
    "questions": {},
    "updated_at": "1000000000",
  },
]
`;

exports[`Course Integration GET /course/:cid/exams_submissions_disputes should return 200, all exams with number of disputes and exam details 1`] = `
[
  {
    "examId": 1,
    "examName": "Exam 0",
    "numberOfDisputes": 6,
  },
  {
    "examId": 2,
    "examName": "Exam 1",
    "numberOfDisputes": 5,
  },
  {
    "examId": 3,
    "examName": "Exam 2",
    "numberOfDisputes": 4,
  },
  {
    "examId": 4,
    "examName": "Exam 3",
    "numberOfDisputes": 3,
  },
  {
    "examId": 5,
    "examName": "Exam 4",
    "numberOfDisputes": 2,
  },
  {
    "examId": 6,
    "examName": "Exam 5",
    "numberOfDisputes": 1,
  },
  {
    "examId": 7,
    "examName": "Exam 6",
    "numberOfDisputes": 0,
  },
  {
    "examId": 8,
    "examName": "Exam 7",
    "numberOfDisputes": 0,
  },
  {
    "examId": 9,
    "examName": "Exam 8",
    "numberOfDisputes": 0,
  },
  {
    "examId": 10,
    "examName": "Exam 9",
    "numberOfDisputes": 0,
  },
]
`;

exports[`Course Integration GET /course/:cid/members should return 200 if user is professor with 2 members 1`] = `
{
  "data": [
    {
      "course_role": "professor",
      "id": 1,
      "user": {
        "avatar_url": null,
        "email": "professor@test.com",
        "first_name": "John",
        "id": 1,
        "last_name": "Doe",
      },
    },
    {
      "course_role": "student",
      "id": 3,
      "user": {
        "avatar_url": null,
        "email": "john.doe-1@test.com",
        "first_name": "John",
        "id": 3,
        "last_name": "Doe-0",
      },
    },
  ],
  "meta": {
    "hasNextPage": true,
    "hasPreviousPage": false,
    "itemCount": 10,
    "page": "1",
    "pageCount": 5,
    "take": "2",
  },
}
`;

exports[`Course Integration GET /course/:cid/members should return 200 if user is professor with default query parameters 1`] = `
{
  "data": [
    {
      "course_role": "professor",
      "id": 1,
      "user": {
        "avatar_url": null,
        "email": "professor@test.com",
        "first_name": "John",
        "id": 1,
        "last_name": "Doe",
      },
    },
    {
      "course_role": "student",
      "id": 3,
      "user": {
        "avatar_url": null,
        "email": "john.doe-1@test.com",
        "first_name": "John",
        "id": 3,
        "last_name": "Doe-0",
      },
    },
    {
      "course_role": "student",
      "id": 2,
      "user": {
        "avatar_url": null,
        "email": "john.doe-0@test.com",
        "first_name": "John",
        "id": 2,
        "last_name": "Doe-1",
      },
    },
    {
      "course_role": "student",
      "id": 4,
      "user": {
        "avatar_url": null,
        "email": "john.doe-2@test.com",
        "first_name": "John",
        "id": 4,
        "last_name": "Doe-1",
      },
    },
    {
      "course_role": "student",
      "id": 5,
      "user": {
        "avatar_url": null,
        "email": "john.doe-3@test.com",
        "first_name": "John",
        "id": 5,
        "last_name": "Doe-2",
      },
    },
    {
      "course_role": "student",
      "id": 6,
      "user": {
        "avatar_url": null,
        "email": "john.doe-4@test.com",
        "first_name": "John",
        "id": 6,
        "last_name": "Doe-3",
      },
    },
    {
      "course_role": "student",
      "id": 7,
      "user": {
        "avatar_url": null,
        "email": "john.doe-5@test.com",
        "first_name": "John",
        "id": 7,
        "last_name": "Doe-4",
      },
    },
    {
      "course_role": "student",
      "id": 8,
      "user": {
        "avatar_url": null,
        "email": "john.doe-6@test.com",
        "first_name": "John",
        "id": 8,
        "last_name": "Doe-5",
      },
    },
    {
      "course_role": "student",
      "id": 9,
      "user": {
        "avatar_url": null,
        "email": "john.doe-7@test.com",
        "first_name": "John",
        "id": 9,
        "last_name": "Doe-6",
      },
    },
    {
      "course_role": "student",
      "id": 10,
      "user": {
        "avatar_url": null,
        "email": "john.doe-8@test.com",
        "first_name": "John",
        "id": 10,
        "last_name": "Doe-7",
      },
    },
    {
      "course_role": "student",
      "id": 11,
      "user": {
        "avatar_url": null,
        "email": "john.doe-9@test.com",
        "first_name": "John",
        "id": 11,
        "last_name": "Doe-8",
      },
    },
  ],
  "meta": {
    "hasNextPage": false,
    "hasPreviousPage": false,
    "itemCount": 11,
    "pageCount": null,
  },
}
`;

exports[`Course Integration GET /course/:cid/public should return course if course is found 1`] = `
{
  "course_code": "COSC 499",
  "course_name": "Capstone Project",
  "id": 1,
  "section_name": "001",
}
`;

exports[`Course Integration GET /course/all should return 200 and all courses 1`] = `
[
  {
    "courseCode": "CS101",
    "courseId": 1,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 2,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 3,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 4,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 5,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 6,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 7,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 8,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 9,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
  {
    "courseCode": "CS101",
    "courseId": 10,
    "creator": {
      "firstName": "Jane",
      "lastName": "Doe",
    },
    "members": "2",
    "semesterName": "Spring 2024",
  },
]
`;

exports[`Course Integration GET /course/all/count should return 200 and count of all courses 1`] = `
{
  "count": 10,
}
`;

exports[`Course Integration POST /course/:cid/enroll should return 200 if user is not already enrolled 1`] = `
CourseUserModel {
  "course": CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 1,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "updated_at": "1000000000",
  },
  "course_role": "student",
  "id": 1,
  "user": UserModel {
    "auth_type": "email",
    "avatar_url": null,
    "created_at": "1000000000",
    "email": "john.doe@test.com",
    "email_verified": true,
    "first_name": "John",
    "id": 1,
    "last_name": "Doe",
    "password": "password",
    "role": "student",
    "updated_at": "1000000000",
  },
}
`;

exports[`Course Integration POST /course/create should return 200 if course is created 1`] = `
CourseModel {
  "course_code": "COSC 499",
  "course_name": "Capstone Project",
  "id": 1,
  "is_archived": false,
  "section_name": "001",
  "semester": SemesterModel {
    "created_at": "1000000000",
    "ends_at": "1000000000",
    "id": 1,
    "name": "Semester 1",
    "starts_at": "1000000000",
    "updated_at": "1000000000",
  },
}
`;
